# meeting-room-booking

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 16ee743b1889_create_initial_tables.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py
app/routers/: auth.py  bookings.py  rooms.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
